syntax = "proto3";

package api;

import "google/protobuf/struct.proto";

option go_package = "./";

service ApiService {
  rpc GetData(DataRequest) returns (DataResponse) {}
}

message DataRequest {
  int32 page = 1;
  int32 limit = 2;
}

message DataResponse {
  .google.protobuf.Struct data = 1;
}